force-app/main/objects/Strategy_and_Goal__c.object
<CustomObject>
    <fields>
        <fullName>Account_Contact_Relations__c</fullName>
        <label>Account Contact Relations</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Status__c</fullName>
        <formula>TEXT(Account_Plan__r.Account_Plan_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Plan Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Strategies and Goals</relationshipLabel>
        <relationshipName>Strategies_and_Goals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Problem_Addressed__c</fullName>
        <label>Business Problem Addressed</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_Next_Steps__c</fullName>
        <label>Comments &amp; Next Steps</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <label>Estimated Completion Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InActive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Contact_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Contact Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Strategies and Goals</relationshipLabel>
        <relationshipName>Strategies_and_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Milestones__c</fullName>
        <label>Key Milestones</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_tasks_completed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of activities completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_tasks_created__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of activities created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunities_Linked__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Opportunities Linked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Strategies_and_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Progress_on_tasks__c</fullName>
        <formula>IF( Number_of_tasks_completed__c=0 || Number_of_tasks_created__c =0 , 0, Number_of_tasks_completed__c/Number_of_tasks_created__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progress on strategy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Resources_Required__c</fullName>
        <label>Resources Required</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Short_Long_Term__c</fullName>
        <formula>IF(
Estimated_Completion_Date__c&lt;=today() , &quot;In the past&quot;,
If(Estimated_Completion_Date__c&lt;=(today()+90) , &quot;Short (0-3 months)&quot;,
If(Estimated_Completion_Date__c&lt;=(today()+180) , &quot;Med (3-6 months)&quot;,
If(Estimated_Completion_Date__c&lt;=(today()+265) , &quot;Long (6-12 months)&quot;,&quot;+1 year&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short / Long Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Goal__c</fullName>
        <label>Solution / Goal</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Solution_Product_Area__c</fullName>
        <label>Solution / Product Area</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Talent Acquisition - Grad</fullName>
                </value>
                <value>
                    <fullName>Talent Acquisition - Volume</fullName>
                </value>
                <value>
                    <fullName>Talent Acquisition - Tech</fullName>
                </value>
                <value>
                    <fullName>Talent Acquisition - Sales</fullName>
                </value>
                <value>
                    <fullName>Talent Acquisition - Professional/Managerial</fullName>
                </value>
                <value>
                    <fullName>Talent Acquisition - General</fullName>
                </value>
                <value>
                    <fullName>Talent Management</fullName>
                </value>
                <value>
                    <fullName>Both TA &amp; TM</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategy_Name__c</fullName>
        <label>Strategy Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategy_Status__c</fullName>
        <label>Strategy Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Strategy_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started (Default)</fullName>
                </value>
                <value>
                    <fullName>Investigation</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Opportunity Created</fullName>
                </value>
                <value>
                    <fullName>No Opportunity</fullName>
                </value>
                <value>
                    <fullName>Won - Partial Achievement</fullName>
                </value>
                <value>
                    <fullName>Won - Achieved Revenue Goals</fullName>
                </value>
                <value>
                    <fullName>Completed - Failed</fullName>
                </value>
                <value>
                    <fullName>Completed - Partial Success</fullName>
                </value>
                <value>
                    <fullName>Completed - Success</fullName>
                </value>
                <value>
                    <fullName>Strategy Expired</fullName>
                </value>
                <value>
                    <fullName>Strategy Valid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategy_Type__c</fullName>
        <label>Strategy Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Defend</fullName>
                </value>
                <value>
                    <fullName>Product Migration</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>Sale</fullName>
                </value>
                <value>
                    <fullName>Competitor Displacement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Strategy</label>
        <referenceTo>Strategy_and_Goal__c</referenceTo>
        <relationshipLabel>Strategies and Goals</relationshipLabel>
        <relationshipName>Strategies_and_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Update_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Update Counter</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Strategy and Goals</label>
    <nameField>
        <displayFormat>STR-{0000}</displayFormat>
        <label>Strategy Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategies and Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Account_plan_is_under_review</fullName>
        <active>true</active>
        <errorConditionFormula>Account_Plan_Status__c=&apos;In Review&apos;</errorConditionFormula>
        <errorMessage>Updating the strategy is not allowed when account plan is under review</errorMessage>
    </validationRules>
</CustomObject>